--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,62 @@
-assets
 _ss_environment.php
-tools/phing-metadata
-silverstripe-cache
 .buildpath
 .project
 .settings
 .solr
 .ea
-apache
-advancedworkflow/
-buildtools/
-cms/
-cwp/
-cwp-core/
-cwp-recipe-basic/
-cwp-recipe-basic-dev/
-docsviewer/
-documentconverter/
-externallinks/
-framework/
-fulltextsearch/
-html5/
-hybridsessions/
-iframe/
-mimevalidator/
-multivaluefield/
-nginx
-queuedjobs/
-registry/
-restfulserver/
-securityreport/
-secureassets/
-selectupload/
-sortablegridfield/
-spellcheck/
-subsites/
-tags
-taxonomy/
-testdata/
-testsession/
-themes/
-translatable/
-userforms/
-versionedfiles/
-versionfeed/
 .idea
 .DS_Store
-vendor/
-silverstripe-phockito/
+/apache
+/assets
+/toolsphing-metadata
+/silverstripe-cache
+/advancedworkflow
+/buildtools
+/comment-notifications
+/content-widget
+/cms
+/cwp
+/cwp-core
+/cwp-recipe-basic
+/cwp-recipe-basic-dev
+/docsviewer
+/documentconverter
+/environmentcheck
+/externallinks
+/framework
+/fulltextsearch
+/html5
+/hybridsessions
+/iframe
+/mimevalidator
+/multivaluefield
+/nginx
+/queuedjobs
+/registry
+/restfulserver
+/securityreport
+/secureassets
+/selectupload
+/sortablegridfield
+/spellcheck
+/subsites
+/tags
+/taxonomy
+/testdata
+/testsession
+/themes
+/translatable
+/userforms
+/versionedfiles
+/versionfeed
+/akismet
+/blog
+/comments
+/cwp-recipe-blog
+/lumberjack
+/samplecontent
+/spamprotection
+/widgets
+/vendor
+/silverstripe-phockito
+/gridfield-bulk-editing-tools
