Stabilise default theme

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"require": {
 		"cwp/cwp-recipe-basic": "1.1.0.x-dev",
 		"cwp/cwp-recipe-blog": "1.1.0.x-dev",
-		"cwp-themes/default": "dev-master"
+		"cwp-themes/default": "~1.1.0@stable"
 	},
 	"require-dev": {
 		"cwp/cwp-recipe-basic-dev": "~1.0.6@stable"
