--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"name": "cwp/cwp-installer",
 	"description": "CWP Project Template",
 	"require": {
-		"cwp/cwp-recipe-basic": "1.1.0.x-dev",
-		"cwp/cwp-recipe-blog": "1.1.0.x-dev",
+		"cwp/cwp-recipe-basic": "~1.1.0@stable",
+		"cwp/cwp-recipe-blog": "~1.1.0@stable",
 		"cwp-themes/default": "~1.1.1@stable"
 	},
 	"require-dev": {
