--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
 	"name": "cwp/cwp-installer",
 	"description": "CWP Project Template",
 	"require": {
-		"cwp/cwp-recipe-basic": "~1.1.0@stable",
-		"cwp/cwp-recipe-blog": "~1.1.0@stable",
-		"cwp-themes/default": "~1.1.1@stable"
+		"cwp/cwp-recipe-basic": "dev-master",
+		"cwp/cwp-recipe-blog": "dev-master",
+		"cwp-themes/default": "dev-master"
 	},
 	"require-dev": {
-		"cwp/cwp-recipe-basic-dev": "~1.0.6@stable"
+		"cwp/cwp-recipe-basic-dev": "dev-master"
 	},
 	"suggest": {
 		"silverstripe/textextraction": "Required for document text searching within CWP"
