--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
 	"config": {
 		"process-timeout": 900
 	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "1.4.x-dev"
+		}
+	},
 	"repositories": [
 		{
 			"type": "composer",
