--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"name": "cwp/cwp-installer",
 	"description": "CWP Project Template",
 	"require": {
-		"cwp/cwp-recipe-basic": "dev-master",
-		"cwp/cwp-recipe-blog": "dev-master",
+		"cwp/cwp-recipe-basic": "1.4.x-dev",
+		"cwp/cwp-recipe-blog": "1.4.x-dev",
 		"cwp-themes/default": "dev-master"
 	},
 	"require-dev": {
