--- a/.editorconfig
+++ b/.editorconfig
@@ -15,12 +15,6 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.yml]
-indent_size = 2
-indent_style = space
-
-[{.travis.yml,package.json}]
-# The indent size used in the `package.json` file cannot be changed
-# https://github.com/npm/npm/pull/3180#issuecomment-16336516
+[*.{yml,js,json,css,scss,eslintrc}]
 indent_size = 2
 indent_style = space
