--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"require": {
 		"cwp/cwp-recipe-basic": "1.4.x-dev",
 		"cwp/cwp-recipe-blog": "1.4.x-dev",
-		"cwp-themes/default": "dev-master"
+		"cwp-themes/default": "1.2.x-dev"
 	},
 	"require-dev": {
 		"cwp/cwp-recipe-basic-dev": "dev-master"
