Update default theme to starter

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -11,7 +11,7 @@ SiteTree:
   extensions:
     - WorkflowEmbargoExpiryExtension
 SSViewer:
-  theme: 'default'
+  theme: 'starter'
 MySQLDatabase:
   connection_charset: 'utf8'
 LeftAndMain:
