--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 /versioned/
 /testsession/
 /elemental/
+/advanceddropdowns/
+/assets/
+/dataobject-preview/
+/elemental-skeletons/
+/gridfieldextensions/
