--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "type": "silverstripe-recipe",
     "require": {
         "php": ">=5.6.0",
-        "silverstripe/recipe-plugin": ">=0.1@dev <1.0",
-        "silverstripe/recipe-cms": "1.0.x-dev",
+        "silverstripe/recipe-cms": "^1.0",
         "silverstripe-themes/simple": "~3.2.0",
         "dnadesign/silverstripe-elemental": "dev-ss4 as dev-master",
         "dnadesign/silverstripe-elemental-skeletons": "dev-master",
-        "silverstripe/elemental-blocks": "1.0.x-dev"
+        "silverstripe/elemental-blocks": "1.0.x-dev",
+        "silverstripe/vendor-plugin-helper": "^1.0@dev"
     },
     "require-dev": {
         "phpunit/PHPUnit": "^5.7"
@@ -33,12 +33,6 @@
     "config": {
         "process-timeout": 600
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:creative-commoners/silverstripe-elemental.git"
-        }
-    ],
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
