--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1",
-        "silverstripe/recipe-cms": "^1",
+        "silverstripe/recipe-cms": "1.0.x-dev",
         "silverstripe/dynamodb": "4.0.x-dev",
         "silverstripe/crontask": "2.x-dev",
         "silverstripe/taxonomy": "2.0.x-dev",
