Upgrade for upcoming CWP 2.0 release
Also expand test suite to encompass all default modules
(at least covering cwp-recipe-core). Remove all now unnecessary support
files, such as .htaccess which is now provided by a dependency.

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -1,21 +1,11 @@
 ---
-Name: mysiteconfig
-After:
-  - 'framework/*'
-  - 'cms/*'
+Name: mycwpsite
 ---
-# YAML configuration for SilverStripe
-# See http://doc.silverstripe.org/framework/en/topics/configuration
-# Caution: Indentation through two spaces, not tabs
-SiteTree:
-  extensions:
-    - WorkflowEmbargoExpiryExtension
-SSViewer:
-  theme: 'starter'
-MySQLDatabase:
-  connection_charset: 'utf8'
-LeftAndMain:
+SilverStripe\View\SSViewer:
+  themes:
+    - 'starter'
+    - '$default'
+SilverStripe\Admin\LeftAndMain:
   help_link: "https://www.cwp.govt.nz/user-help/"
-VersionFeed:
-  allchanges_enabled: false
-  changes_enabled: false
+SilverStripe\Control\Email:
+  admin_email: 'no-reply@cwp.govt.nz'
