--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,32 +1,31 @@
-<!-- 
+<!--
 	PHPUnit configuration for SilverStripe
-
-	Requires PHPUnit 3.5+
-
-	Usage: 
+	Requires PHPUnit 5+
+	Usage:
 	 - "phpunit": Runs all tests in all folders
 	 - "phpunit framework/tests/": Run all tests of the framework module
 	 - "phpunit framework/tests/filesystem": Run all filesystem tests within the framework module
 	 - "phpunit framework/tests/filesystem/FolderTest.php": Run a single test
 	 - "phpunit <dash><dash>coverage-html assets/": Generate coverage report (replace <dash> with "-", requires xdebug)
-	
 	More information:
 	- http://www.phpunit.de/manual/current/en/textui.html
 	- http://doc.silverstripe.org/framework/en/topics/testing/#configuration
-
 	It is safe to remove this file for normal website operation.
 -->
 <phpunit bootstrap="framework/tests/bootstrap.php" colors="true">
 
 	<testsuite name="Default">
 		<directory>mysite/tests</directory>
-		<directory>cms/tests</directory>
-		<directory>framework/tests</directory>
+		<directory>vendor/cwp/cwp-core/tests</directory>
+		<directory>vendor/silverstripe/admin/tests/php</directory>
+		<directory>vendor/silverstripe/assets/tests/php</directory>
+		<directory>vendor/silverstripe/auditor/tests</directory>
+		<directory>vendor/silverstripe/config/tests</directory>
+		<directory>vendor/silverstripe/environmentcheck/tests</directory>
+		<directory>vendor/silverstripe/framework/tests/php</directory>
+		<directory>vendor/silverstripe/hybridsessions/tests</directory>
+		<directory>vendor/silverstripe/versioned/tests/php</directory>
 	</testsuite>
-	
-	<listeners>
-		<listener class="SS_TestListener" file="framework/dev/TestListener.php" />
-	</listeners>
 	
 	<groups>
 		<exclude>
