Reinstate Pages, alter configuration layout
Make test groups more granular, add phpcs config, and other tidy ups.

--- a/mysite/_config/cwpadmin.yml
+++ b/mysite/_config/cwpadmin.yml
@@ -1,10 +1,6 @@
 ---
-Name: mycwpsite
+Name: cwpadmin
 ---
-SilverStripe\View\SSViewer:
-  themes:
-    - 'starter'
-    - '$default'
 SilverStripe\Admin\LeftAndMain:
   help_link: "https://www.cwp.govt.nz/user-help/"
 SilverStripe\Control\Email:
