--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,6 @@ trim_trailing_whitespace = false
 [*.{yml,js,json,css,scss,eslintrc}]
 indent_size = 2
 indent_style = space
+
+[composer.json]
+indent_size = 4
