--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,20 @@
 {
     "name": "cwp/cwp-installer",
+    "type": "silverstripe-recipe",
     "description": "CWP Project Template",
     "license": "BSD-3-Clause",
     "require": {
+        "php": ">=7.1.0",
+        "silverstripe/recipe-plugin": "^1",
         "cwp/cwp-recipe-core": "2.x-dev",
+        "cwp/cwp": "2.x-dev",
         "cwp/starter-theme": "2.x-dev"
     },
     "extra": {
-        "project-files": [
-            "mysite/*"
-        ],
+        "project-files": ["mysite/*"],
         "branch-alias": {
             "dev-master": "2.x-dev"
-        },
-        "project-files-installed": [
-            "mysite/.htaccess",
-            "mysite/_config.php",
-            "mysite/_config/environmentcheck.yml",
-            "mysite/_config/mysite.yml"
-        ],
-        "public-files-installed": [
-            ".htaccess",
-            "index.php",
-            "install-frameworkmissing.html",
-            "install.php",
-            "web.config"
-        ]
+        }
     },
     "config": {
         "process-timeout": 600
