--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,49 @@
     "description": "CWP Project Template",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1",
+
+        "silverstripe/recipe-core": "^1",
+        "silverstripe/assets": "^1",
+        "silverstripe/config": "^1",
+        "silverstripe/framework": "^4",
+
+        "silverstripe/recipe-cms": "^1",
+        "silverstripe/admin": "1.0.x-dev",
+        "silverstripe/asset-admin": "1.0.x-dev",
+        "silverstripe/campaign-admin": "1.0.x-dev",
+        "silverstripe/cms": "4.0.x-dev",
+        "silverstripe/errorpage": "1.0.x-dev",
+        "silverstripe/graphql": "1.0.x-dev",
+        "silverstripe/reports": "4.0.x-dev",
+        "silverstripe/siteconfig": "4.0.x-dev",
+        "silverstripe/versioned": "1.0.x-dev",
+
         "cwp/cwp-recipe-core": "2.x-dev",
+        "cwp/cwp-core": "2.x-dev",
+        "silverstripe/hybridsessions": "2.x-dev",
+        "silverstripe/auditor": "2.x-dev",
+        "silverstripe/environmentcheck": "2.x-dev",
+
         "cwp/cwp": "2.x-dev",
+        "silverstripe/html5": "2.x-dev",
+        "symbiote/silverstripe-gridfieldextensions": "3.0.x-dev",
+        "cwp/cwp-pdfexport": "1.x-dev",
+
+        "cwp/cwp-search": "1.x-dev",
+        "symbiote/silverstripe-queuedjobs": "2.x-dev",
+        "silverstripe/textextraction": "3.x-dev",
+
+        "silverstripe/subsites": "2.0.x-dev",
+        "tractorcow/silverstripe-fluent": "2.x-dev",
+        "silverstripe/registry": "2.x-dev",
         "cwp/starter-theme": "2.x-dev"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7",
+        "squizlabs/php_codesniffer": "^3",
+        "lekoala/silverstripe-debugbar": "^2@dev"
     },
     "extra": {
         "project-files": ["mysite/*"],
