--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ env:
 matrix:
   include:
     - php: 5.6
-      env: DB=MYSQL PHPCS_TEST=1 PHPUNIT_TEST=1
+      env: PHPUNIT_TEST=core,cwpcore
     - php: 7.0
-      env: DB=PGSQL PHPUNIT_TEST=1
+      env: PHPUNIT_TEST=admin,cwpcms,Default
     - php: 7.1
-      env: DB=MYSQL PHPUNIT_COVERAGE_TEST=1
+      env: PHPCS_TEST=1 PHPUNIT_COVERAGE_TEST=1
     - php: 7.2
-      env: DB=MYSQL PHPUNIT_TEST=1
+      env: PHPUNIT_TEST=cwpsearch
 
 before_script:
   # Init PHP
@@ -24,13 +24,12 @@ before_script:
 
   # Install composer dependencies
   - composer validate
-  - if [[ $DB == PGSQL ]]; then composer require silverstripe/postgresql:2.0.x-dev --no-update; fi
   - composer install --prefer-dist --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
 script:
   - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit --testsuite ${PHPUNIT_TEST/1/Default}; fi
   - if [[ $PHPUNIT_COVERAGE_TEST ]]; then phpdbg -qrr vendor/bin/phpunit --coverage-clover=coverage.xml; fi
-  - if [[ $PHPCS_TEST ]]; then vendor/bin/phpcs src/ tests/ *.php; fi
+  - if [[ $PHPCS_TEST ]]; then vendor/bin/phpcs mysite/ *.php; fi
 
 after_success:
   - if [[ $PHPUNIT_COVERAGE_TEST ]]; then bash <(curl -s https://codecov.io/bash) -f coverage.xml; fi
