--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,7 +7,7 @@
 	 - "vendor/bin/phpunit vendor/silverstripe/framework/tests/": Run all tests of the framework module
 	 - "vendor/bin/phpunit vendor/silverstripe/framework/tests/filesystem": Run all filesystem tests within the framework module
 	 - "vendor/bin/phpunit vendor/silverstripe/framework/tests/filesystem/FolderTest.php": Run a single test
-	 - "vendor/bin/phpunit --coverage-html assets/": Generate coverage report (replace <dash> with "-", requires xdebug)
+	 - "vendor/bin/phpunit <dash><dash>coverage-html assets/": Generate coverage report (replace <dash> with "-", requires xdebug)
 	More information:
 	- http://www.phpunit.de/manual/current/en/textui.html
 	- http://doc.silverstripe.org/framework/en/topics/testing/#configuration
@@ -17,17 +17,33 @@
 
 	<testsuite name="Default">
 		<directory>mysite/tests</directory>
-		<directory>vendor/silverstripe/cms/tests/php</directory>
-		<directory>vendor/silverstripe/framework/tests/php</directory>
-		<directory>vendor/cwp/cwp/tests</directory>
+		<directory>vendor/silverstripe/subsites/tests</directory>
+		<directory>vendor/silverstripe/registry/tests</directory>
+		<directory>vendor/tractorcow/silverstripe-fluent/tests</directory>
 	</testsuite>
 
     <!-- cwp core components -->
-	<testsuite name="cwp">
+	<testsuite name="cwpcore">
 		<directory>vendor/cwp/cwp-core/tests</directory>
 		<directory>vendor/silverstripe/auditor/tests</directory>
 		<directory>vendor/silverstripe/environmentcheck/tests</directory>
 		<directory>vendor/silverstripe/hybridsessions/tests</directory>
+		<directory>vendor/silverstripe/mimevalidator/tests</directory>
+	</testsuite>
+
+	<testsuite name="cwpcms">
+		<directory>vendor/cwp/cwp/tests</directory>
+		<directory>vendor/silverstripe/taxonomy/tests</directory>
+		<directory>vendor/silverstripe/html5/tests</directory>
+		<directory>vendor/cwp/cwp-pdfexport/tests</directory>
+		<directory>vendor/symbiote/silverstripe-gridfieldextensions/tests</directory>
+	</testsuite>
+
+	<testsuite name="cwpsearch">
+		<directory>vendor/cwp/cwp-search/tests</directory>
+		<directory>vendor/silverstripe/fulltextsearch/tests</directory>
+		<directory>vendor/symbiote/silverstripe-queuedjobs/tests</directory>
+		<directory>vendor/silverstripe/textextraction/tests</directory>
 	</testsuite>
 
     <!-- silverstripe core components -->
