--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "^3",
-        "lekoala/silverstripe-debugbar": "^2@dev"
+        "squizlabs/php_codesniffer": "^3"
     },
     "extra": {
         "project-files": ["mysite/*"],
