--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,17 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.x-dev"
+        "cwp/cwp-installer": "2.x-dev",
+        "cwp/agency-extensions": "2.x-dev",
+        "cwp/watea-theme": "2.x-dev",
+        "silverstripe/controllerpolicy": "2.x-dev",
+        "silverstripe/crontask": "2.x-dev",
+        "silverstripe/gridfieldqueuedexport": "2.x-dev",
+        "silverstripe/ldap": "1.0.x-dev",
+        "silverstripe/recipe-content-blocks": "1.x-dev",
+        "dnadesign/silverstripe-elemental-subsites": "1.x-dev",
+        "dnadesign/silverstripe-elemental-userforms": "1.x-dev",
+        "undefinedoffset/sortablegridfield": "2.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
