--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "silverstripe/subsites": "2.0.x-dev",
         "tractorcow/silverstripe-fluent": "4.0.x-dev",
         "silverstripe/registry": "2.x-dev",
-        "cwp/starter-theme": "2.x-dev"
+        "cwp/starter-theme": "2.x-dev",
+        "silverstripe/recipe-content-blocks": "1.x-dev"
     },
     "suggest": {
         "silverstripe/recipe-content-blocks": "Supplement the CMS with a 'content block' approach to editing"
@@ -35,8 +36,10 @@
             "mysite/.htaccess",
             "mysite/_config.php",
             "mysite/_config/blog.yml",
+            "mysite/_config/contentblocks.yml",
             "mysite/_config/environmentcheck.yml",
             "mysite/_config/mysite.yml",
+            "mysite/code/BlocksPage.php",
             "mysite/code/Page.php",
             "mysite/code/PageController.php"
         ],
@@ -50,6 +53,11 @@
     },
     "config": {
         "process-timeout": 600
+    },
+    "autoload": {
+        "psr-4": {
+            "Mysite\\Project\\": "mysite/code"
+        }
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
