--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,8 @@
 RewriteEngine On
 RewriteRule ^(.*)$ public/$1
+
+<IfModule mod_php5.c>
+    php_value upload_max_filesize 20M
+    php_value post_max_size 50M
+    php_value memory_limit 512M
+</IfModule>
