Disable Solr and default elemental stylesheet

--- a/mysite/_config/contentblocks.yml
+++ b/mysite/_config/contentblocks.yml
@@ -5,6 +5,9 @@ BlocksPage:
   extensions:
     - DNADesign\Elemental\Extensions\ElementalPageExtension
 
+DNADesign\Elemental\Controllers\ElementController:
+  include_default_styles: false
+
 ---
 Name: contentblockssubsites
 Only:
