--- a/mysite/_config/mysite.yml
+++ b/mysite/_config/mysite.yml
@@ -3,3 +3,6 @@ Name: myproject
 ---
 SilverStripe\Core\Manifest\ModuleManifest:
   project: mysite
+
+SilverStripe\FullTextSearch\Search\Updaters\SearchUpdater:
+  enabled: false
