--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "tractorcow/silverstripe-fluent": "4.0.x-dev",
         "silverstripe/registry": "2.x-dev",
         "cwp/starter-theme": "2.x-dev",
-        "silverstripe/recipe-content-blocks": "1.x-dev"
+        "silverstripe/recipe-content-blocks": "1.x-dev",
+        "silverstripe/controllerpolicy": "^2.0"
     },
     "suggest": {
         "silverstripe/recipe-content-blocks": "Supplement the CMS with a 'content block' approach to editing"
