--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ matrix:
       env: PHPUNIT_TEST=Default PDO=1
     - php: 7.1
       env: PHPUNIT_TEST=recipe-core
+    - php: 7.2
+      env: PHPUNIT_TEST=framework-orm
+    - php: 7.2
+      env: PHPUNIT_TEST=framework-core
     - php: 5.6
       env: PHPUNIT_TEST=recipe-cms
     - php: 7.1
