--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "dnadesign/silverstripe-elemental-userforms": "1.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "mikey179/vfsStream": "^1.6"
     },
     "extra": {
         "project-files": [],
