Update dependencies for 2.1 and remove branch alias

--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.x-dev",
+        "cwp/cwp-installer": "2.1.x-dev",
         "cwp/agency-extensions": "2.0.x-dev",
-        "cwp/watea-theme": "2.x-dev",
-        "silverstripe/controllerpolicy": "2.x-dev",
-        "silverstripe/crontask": "2.x-dev",
-        "silverstripe/gridfieldqueuedexport": "2.x-dev",
+        "cwp/watea-theme": "2.0.x-dev",
+        "silverstripe/controllerpolicy": "2.0.x-dev",
+        "silverstripe/crontask": "2.1.x-dev",
+        "silverstripe/gridfieldqueuedexport": "2.1.x-dev",
         "silverstripe/ldap": "1.0.x-dev",
-        "silverstripe/recipe-content-blocks": "1.x-dev",
+        "silverstripe/recipe-content-blocks": "1.1.x-dev",
         "dnadesign/silverstripe-elemental-subsites": "1.x-dev",
         "dnadesign/silverstripe-elemental-userforms": "1.x-dev"
     },
@@ -22,10 +22,7 @@
         "mikey179/vfsStream": "^1.6"
     },
     "extra": {
-        "project-files": [],
-        "branch-alias": {
-            "dev-master": "2.x-dev"
-        }
+        "project-files": []
     },
     "config": {
         "process-timeout": 600
