Add silverstripe-maintenance modules to reporting-tools testsuite

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -106,6 +106,9 @@
         <directory>vendor/silverstripe/reports/tests</directory>
         <directory>vendor/silverstripe/securityreport/tests</directory>
         <directory>vendor/silverstripe/sitewidecontent-report/tests</directory>
+        <directory>vendor/bringyourownideas/silverstripe-maintenance/tests</directory>
+        <directory>vendor/bringyourownideas/silverstripe-composer-update-checker/tests</directory>
+        <directory>vendor/bringyourownideas/silverstripe-composer-security-checker/tests</directory>
     </testsuite>
 
     <testsuite name="recipe-services">
