CWP 2.1.x-dev install

--- a/app/_config/theme.yml
+++ b/app/_config/theme.yml
@@ -1,7 +1,8 @@
 ---
-Name: mytheme
+Name: cwptheme
 ---
 SilverStripe\View\SSViewer:
   themes:
-    - 'simple'
+    - '$public'
+    - 'starter'
     - '$default'
