--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,38 +1,28 @@
-<!--
-	PHPUnit configuration for SilverStripe
-
-	Requires PHPUnit 5+
-
-	Usage:
-	 - "phpunit": Runs all tests in all folders
-	 - "phpunit framework/tests/": Run all tests of the framework module
-	 - "phpunit framework/tests/filesystem": Run all filesystem tests within the framework module
-	 - "phpunit framework/tests/filesystem/FolderTest.php": Run a single test
-	 - "phpunit <dash><dash>coverage-html assets/": Generate coverage report (replace <dash> with "-", requires xdebug)
-
-	More information:
-	- http://www.phpunit.de/manual/current/en/textui.html
-	- http://doc.silverstripe.org/framework/en/topics/testing/#configuration
-
-	It is safe to remove this file for normal website operation.
--->
+<?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="vendor/silverstripe/framework/tests/bootstrap.php" colors="true">
-
-	<testsuite name="Default">
-		<directory>mysite/tests</directory>
-		<directory>vendor/silverstripe/cms/tests/php</directory>
-		<directory>vendor/silverstripe/framework/tests/php</directory>
-	</testsuite>
-
-    <!-- core components -->
-    <testsuite name="core">
-		<directory>vendor/silverstripe/framework/tests/php/</directory>
-		<directory>vendor/silverstripe/assets/tests/php/</directory>
+    <!-- Core SilverStripe modules (except framework) -->
+    <testsuite name="recipe-core">
+        <directory>vendor/silverstripe/config/tests</directory>
+        <directory>vendor/silverstripe/assets/tests/php/</directory>
         <directory>vendor/silverstripe/versioned/tests/php/</directory>
     </testsuite>
 
-    <!-- admin components -->
-    <testsuite name="admin">
+    <!-- Framework ORM tests are split up to run in parallel -->
+    <testsuite name="framework-orm">
+        <directory>vendor/silverstripe/framework/tests/php/ORM</directory>
+    </testsuite>
+    <testsuite name="framework-core">
+        <directory>vendor/silverstripe/framework/tests/php/Control</directory>
+        <directory>vendor/silverstripe/framework/tests/php/Core</directory>
+        <directory>vendor/silverstripe/framework/tests/php/Dev</directory>
+        <directory>vendor/silverstripe/framework/tests/php/Forms</directory>
+        <directory>vendor/silverstripe/framework/tests/php/Logging</directory>
+        <directory>vendor/silverstripe/framework/tests/php/Security</directory>
+        <directory>vendor/silverstripe/framework/tests/php/View</directory>
+        <directory>vendor/silverstripe/framework/tests/php/i18n</directory>
+    </testsuite>
+
+    <testsuite name="recipe-cms">
         <directory>vendor/silverstripe/cms/tests/</directory>
         <directory>vendor/silverstripe/admin/tests/php/</directory>
         <directory>vendor/silverstripe/campaign-admin/tests/php/</directory>
@@ -42,9 +32,89 @@
         <directory>vendor/silverstripe/reports/tests/</directory>
     </testsuite>
 
-	<groups>
-		<exclude>
-			<group>sanitychecks</group>
-		</exclude>
-	</groups>
+    <!-- Optional CWP modules that aren't in recipes -->
+    <testsuite name="Default">
+        <directory>mysite/tests</directory>
+        <directory>vendor/silverstripe/subsites/tests</directory>
+        <directory>vendor/silverstripe/registry/tests</directory>
+        <directory>vendor/tractorcow/silverstripe-fluent/tests</directory>
+    </testsuite>
+
+    <!-- Core CWP recipes -->
+    <testsuite name="cwp-recipe-core">
+        <directory>vendor/cwp/cwp-core/tests</directory>
+        <directory>vendor/silverstripe/auditor/tests</directory>
+        <directory>vendor/silverstripe/environmentcheck/tests</directory>
+        <directory>vendor/silverstripe/hybridsessions/tests</directory>
+        <directory>vendor/silverstripe/mimevalidator/tests</directory>
+    </testsuite>
+
+    <testsuite name="cwp-recipe-cms">
+        <directory>vendor/cwp/cwp-core/tests</directory>
+        <directory>vendor/cwp/cwp/tests</directory>
+        <directory>vendor/cwp/cwp-pdfexport/tests</directory>
+        <directory>vendor/silverstripe/html5/tests</directory>
+        <directory>vendor/symbiote/silverstripe-gridfieldextensions/tests</directory>
+    </testsuite>
+
+    <testsuite name="cwp-recipe-search">
+        <directory>vendor/cwp/cwp</directory>
+        <directory>vendor/cwp/cwp-search/tests</directory>
+        <directory>vendor/silverstripe/fulltextsearch/tests</directory>
+        <directory>vendor/symbiote/silverstripe-queuedjobs/tests</directory>
+    </testsuite>
+
+    <!-- Optional SilverStripe recipes -->
+    <testsuite name="recipe-authoring-tools">
+        <directory>vendor/silverstripe/documentconverter/tests</directory>
+        <directory>vendor/silverstripe/iframe/tests</directory>
+        <directory>vendor/silverstripe/spellcheck/tests</directory>
+        <directory>vendor/silverstripe/tagfield/tests</directory>
+        <directory>vendor/silverstripe/taxonomy/tests</directory>
+    </testsuite>
+
+    <testsuite name="recipe-blog">
+        <directory>vendor/silverstripe/blog/tests</directory>
+        <directory>vendor/silverstripe/lumberjack/tests</directory>
+        <directory>vendor/silverstripe/widgets/tests</directory>
+        <directory>vendor/silverstripe/content-widget/tests</directory>
+        <directory>vendor/silverstripe/spamprotection/tests</directory>
+        <directory>vendor/silverstripe/akismet/tests</directory>
+        <directory>vendor/silverstripe/comments/tests</directory>
+        <directory>vendor/silverstripe/comment-notifications/tests</directory>
+        <directory>vendor/colymba/gridfield-bulk-editing-tools/tests</directory>
+    </testsuite>
+
+    <testsuite name="recipe-collaboration">
+        <directory>vendor/silverstripe/contentreview/tests</directory>
+        <directory>vendor/silverstripe/sharedraftcontent/tests</directory>
+        <directory>vendor/symbiote/silverstripe-advancedworkflow/tests</directory>
+    </testsuite>
+
+    <testsuite name="recipe-content-blocks">
+        <directory>vendor/dnadesign/silverstripe-elemental/tests</directory>
+        <directory>vendor/silverstripe/elemental-fileblock/tests</directory>
+        <directory>vendor/silverstripe/elemental-bannerblock/tests</directory>
+    </testsuite>
+
+    <testsuite name="recipe-form-building">
+        <directory>vendor/silverstripe/segment-field/tests</directory>
+        <directory>vendor/silverstripe/userforms/tests</directory>
+        <directory>vendor/symbiote/silverstripe-queuedjobs/tests</directory>
+    </testsuite>
+
+    <testsuite name="recipe-reporting-tools">
+        <directory>vendor/silverstripe/externallinks/tests</directory>
+        <directory>vendor/silverstripe/reports/tests</directory>
+        <directory>vendor/silverstripe/securityreport/tests</directory>
+        <directory>vendor/silverstripe/sitewidecontent-report/tests</directory>
+        <directory>vendor/bringyourownideas/silverstripe-maintenance/tests</directory>
+        <directory>vendor/bringyourownideas/silverstripe-composer-update-checker/tests</directory>
+        <directory>vendor/bringyourownideas/silverstripe-composer-security-checker/tests</directory>
+    </testsuite>
+
+    <testsuite name="recipe-services">
+        <directory>vendor/silverstripe/restfulserver/tests</directory>
+        <directory>vendor/silverstripe/versionfeed/tests</directory>
+    </testsuite>
 </phpunit>
