--- a/.travis.yml
+++ b/.travis.yml
@@ -1,88 +1,63 @@
 language: php
 
-dist: trusty
-
-cache:
-  directories:
-    - $HOME/.composer/cache/files
-
 addons:
-  firefox: "31.0"
   apt:
     packages:
-      - tidy
+      - hunspell
+      - libhunspell-dev
+      - hunspell-en-us
 
 env:
   global:
-    - TRAVIS_NODE_VERSION="6"
-    - COMPOSER_ROOT_VERSION="4.0.x-dev"
-    - DISPLAY=":99"
-    - XVFBARGS=":99 -ac -screen 0 1024x768x16"
+    - COMPOSER_ROOT_VERSION="4.1.x-dev"
+    - DB=MYSQL
 
 matrix:
-  fast_finish: true
   include:
-    # Core php tests
     - php: 5.6
-      env:
-        - PHPUNIT_TEST=core
-        - DB=MYSQL
-        - PDO=1
-    - php: 7.1.2
-      env:
-        - PHPUNIT_TEST=core
-        - DB=PGSQL
-    # admin php tests
+      env: PHPUNIT_TEST=Default PDO=1
+    - php: 7.1
+      env: PHPUNIT_TEST=recipe-core
+    - php: 7.2
+      env: PHPUNIT_TEST=framework-orm
+    - php: 7.2
+      env: PHPUNIT_TEST=framework-core
     - php: 5.6
-      env:
-        - PHPUNIT_TEST=admin
-        - DB=PGSQL
-    - php: 7.1.2
-      env:
-        - PHPUNIT_TEST=admin
-        - DB=MYSQL
-        - PDO=1
-    # behat tests
+      env: PHPUNIT_TEST=recipe-cms
+    - php: 7.1
+      env: PHPUNIT_TEST=cwp-recipe-core PDO=1
+    - php: 7.0
+      env: PHPUNIT_TEST=cwp-recipe-cms
+    - php: 7.2
+      env: PHPUNIT_TEST=cwp-recipe-search PDO=1
     - php: 5.6
-      env:
-        - BEHAT_TEST="@framework"
-        - DB=MYSQL
+      env: PHPUNIT_TEST=recipe-authoring-tools
+    - php: 7.0
+      env: PHPUNIT_TEST=recipe-blog
+    - php: 7.1
+      env: PHPUNIT_TEST=recipe-collaboration
+    - php: 7.2
+      env: PHPUNIT_TEST=recipe-content-blocks
     - php: 5.6
-      env:
-        - BEHAT_TEST="@cms"
-        - DB=MYSQL
-    - php: 5.6
-      env:
-        - BEHAT_TEST="@asset-admin"
-        - DB=MYSQL
+      env: PHPUNIT_TEST=recipe-form-building
+    - php: 7.0
+      env: PHPUNIT_TEST=recipe-reporting-tools
+    - php: 7.1
+      env: PHPUNIT_TEST=recipe-services
 
 before_script:
-# Init PHP
-  - printf "\n" | pecl install imagick
+  # Configure PHP
   - phpenv rehash
   - phpenv config-rm xdebug.ini || true
   - echo 'memory_limit = 2048M' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
-# Install composer dependencies
+  # Install dependencies
   - composer validate
-  - if [[ $DB == PGSQL ]]; then composer require --no-update silverstripe/postgresql:2.0.x-dev; fi
-  - if [[ $BEHAT_TEST ]]; then composer require --no-update silverstripe/behat-extension:^3 silverstripe/serve:dev-master se/selenium-server-standalone:2.41.0; fi;
-  - composer install --prefer-dist --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
+  - composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
-# Start behat services
-  - if [[ $BEHAT_TEST ]]; then echo 'SS_BASE_URL=http://localhost:8080/' >> .env; fi
-  - if [[ $BEHAT_TEST ]]; then mkdir artifacts; fi
-  - if [[ $BEHAT_TEST ]]; then cp composer.lock artifacts/; fi
-  - if [[ $BEHAT_TEST ]]; then sh -e /etc/init.d/xvfb start; sleep 3; fi
-  - if [[ $BEHAT_TEST ]]; then (vendor/bin/selenium-server-standalone > artifacts/selenium.log 2>&1 &); fi
-  - if [[ $BEHAT_TEST ]]; then (vendor/bin/serve --bootstrap-file cms/tests/behat/serve-bootstrap.php &> artifacts/serve.log &); fi
+  # Validate cow schema
+  - composer global require silverstripe/cow ^2
+  - ~/.composer/vendor/bin/cow schema:validate
 
 script:
-  - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit --testsuite $PHPUNIT_TEST; fi
-  - if [[ $BEHAT_TEST ]]; then vendor/bin/behat $BEHAT_TEST; fi
-
-after_failure:
-  - if [[ $BEHAT_TEST ]]; then php ./framework/tests/behat/travis-upload-artifacts.php --if-env BEHAT_TEST,ARTIFACTS_BUCKET,ARTIFACTS_KEY,ARTIFACTS_SECRET --target-path $TRAVIS_REPO_SLUG/$TRAVIS_BUILD_ID/$TRAVIS_JOB_ID --artifacts-base-url https://s3.amazonaws.com/$ARTIFACTS_BUCKET/ --artifacts-path ./artifacts/; fi
-
-notifications:
-  slack: silverstripeltd:Cls1xnypKBLFhv0YIRtNLzlQ
+  - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit --testsuite "$PHPUNIT_TEST"; fi
