--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,49 @@
 {
-    "name": "silverstripe/installer",
+    "name": "cwp/cwp-recipe-kitchen-sink",
     "type": "silverstripe-recipe",
-    "description": "The SilverStripe Framework Installer",
+    "description": "Internal testing CWP recipe for all modules, optional and suggested",
+    "homepage": "https://www.cwp.govt.nz",
+    "license": "BSD-3-Clause",
     "require": {
-        "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1",
-        "silverstripe/recipe-cms": "^1",
-        "silverstripe-themes/simple": "~3.2.0",
-        "silverstripe/dynamodb": "4.0.x-dev",
-        "silverstripe/crontask": "2.x-dev"
+        "cwp/cwp-installer": "2.1.x-dev",
+        "cwp/agency-extensions": "2.0.x-dev",
+        "cwp/watea-theme": "2.0.x-dev",
+        "silverstripe/controllerpolicy": "2.0.x-dev",
+        "silverstripe/crontask": "2.1.x-dev",
+        "silverstripe/gridfieldqueuedexport": "2.1.x-dev",
+        "silverstripe/ldap": "1.0.x-dev",
+        "silverstripe/recipe-content-blocks": "2.0.x-dev",
+        "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
+        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "mikey179/vfsStream": "^1.6"
     },
     "extra": {
-        "project-files": [
-            "assets/*",
-            "mysite/_config/*",
-            ".env.example",
-            "favicon.ico"
-        ],
-        "branch-alias": {
-            "dev-master": "5.x-dev"
-        },
         "project-files-installed": [
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/blog.yml",
+            "app/_config/contentblocks.yml",
+            "app/_config/cwpadmin.yml",
+            "app/_config/environmentcheck.yml",
+            "app/_config/mysite.yml",
+            "app/_config/oembed.yml",
+            "app/_config/theme.yml",
+            "app/_config/versionfeed.yml",
+            "app/src/BlocksPage.php",
+            "app/src/HomePage.php",
+            "app/src/HomePageController.php",
+            "app/src/Page.php",
+            "app/src/PageController.php"
+        ],
+        "public-files-installed": [
             ".htaccess",
             "index.php",
             "install-frameworkmissing.html",
             "install.php",
-            "mysite/.htaccess",
-            "mysite/_config.php",
-            "mysite/_config/mysite.yml",
-            "mysite/code/Page.php",
-            "mysite/code/PageController.php",
             "web.config"
         ]
     },
