Use forked maintenance module

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,12 @@
         "silverstripe/ldap": "1.0.x-dev",
         "silverstripe/recipe-content-blocks": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev"
+        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev",
+        "bringyourownideas/silverstripe-composer-update-checker": "dev-pulls/2.0/composer-home as 2.0.x-dev"
     },
+    "repositories": [
+        {"type": "vcs", "url": "git@github.com:creative-commoners/silverstripe-composer-update-checker.git"}
+    ],
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "mikey179/vfsStream": "^1.6"
