--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,8 @@
         "silverstripe/ldap": "1.0.x-dev",
         "silverstripe/recipe-content-blocks": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev",
-        "bringyourownideas/silverstripe-maintenance": "dev-pulls/2.0/client-options as 2.0.x-dev",
-        "cwp/cwp": "dev-pulls/2.1/maintenance-proxy-config as 2.1.x-dev"
+        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev"
     },
-    "repositories": [
-        {"type": "vcs", "url": "git@github.com:creative-commoners/silverstripe-maintenance.git"},
-        {"type": "vcs", "url": "git@github.com:creative-commoners/cwp.git"}
-    ],
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "mikey179/vfsStream": "^1.6"
