--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,16 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.1.x-dev",
-        "cwp/agency-extensions": "2.0.x-dev",
-        "cwp/watea-theme": "2.0.x-dev",
-        "silverstripe/controllerpolicy": "2.0.x-dev",
-        "silverstripe/crontask": "2.1.x-dev",
-        "silverstripe/gridfieldqueuedexport": "2.1.x-dev",
-        "silverstripe/ldap": "1.0.x-dev",
-        "silverstripe/recipe-content-blocks": "2.0.x-dev",
-        "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev"
+        "cwp/cwp-installer": "^2.1",
+        "cwp/agency-extensions": "^2.0",
+        "cwp/watea-theme": "^2.0",
+        "silverstripe/controllerpolicy": "^2.0",
+        "silverstripe/crontask": "^2.0",
+        "silverstripe/gridfieldqueuedexport": "^2.1",
+        "silverstripe/ldap": "^1.0",
+        "silverstripe/recipe-content-blocks": "^2.0",
+        "dnadesign/silverstripe-elemental-subsites": "^2.0",
+        "dnadesign/silverstripe-elemental-userforms": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
