--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "silverstripe/ldap": "^1.0",
         "silverstripe/recipe-content-blocks": "^2.0",
         "dnadesign/silverstripe-elemental-subsites": "^2.0",
-        "dnadesign/silverstripe-elemental-userforms": "^2.0"
+        "dnadesign/silverstripe-elemental-userforms": "^2.0",
+        "bringyourownideas/silverstripe-maintenance": "2.0.x-dev as 2.0.0",
+        "bringyourownideas/silverstripe-composer-update-checker": "2.0.x-dev as 2.0.0",
+        "bringyourownideas/silverstripe-composer-security-checker": "2.0.x-dev as 2.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
