--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "dnadesign/silverstripe-elemental-userforms": "^2.0",
         "bringyourownideas/silverstripe-maintenance": "2.0.x-dev as 2.0.0",
         "bringyourownideas/silverstripe-composer-update-checker": "2.0.x-dev as 2.0.0",
-        "bringyourownideas/silverstripe-composer-security-checker": "2.0.x-dev as 2.0.0"
+        "bringyourownideas/silverstripe-composer-security-checker": "2.0.x-dev as 2.0.0",
+        "cwp/cwp": "2.1.x-dev as 2.1.0-beta1",
+        "cwp/cwp-core": "2.1.x-dev as 2.1.0-beta1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
