--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "silverstripe/ldap": "1.0.x-dev",
         "silverstripe/recipe-content-blocks": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
-        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev"
+        "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev",
+        "silverstripe/textextraction": "3.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
