Update to latest SS4 Elemental inline editing work
In preparation for 4.0 release of Elemental, in order to be hosted
on a real instance for feature testing & integration.

--- a/app/_config/theme.yml
+++ b/app/_config/theme.yml
@@ -1,8 +1,8 @@
 ---
-Name: mytheme
+Name: cwptheme
 ---
 SilverStripe\View\SSViewer:
   themes:
-    - 'demo'
-    - 'simple'
+    - '$public'
+    - 'starter'
     - '$default'
