--- a/.gitignore
+++ b/.gitignore
@@ -12,24 +12,5 @@
 
 # ignore 'exposed' assets
 /resources/
+/public/resources/
 
-# ignore default modules from composer
-/asset-admin/
-/campaign-admin/
-/cms/
-/framework/
-/graphql/
-/reports/
-/silverstripe-admin/
-/silverstripe-assets/
-/silverstripe-errorpage/
-/siteconfig/
-/themes/simple/
-/versioned/
-/testsession/
-/elemental/
-/advanceddropdowns/
-/assets/
-/dataobject-preview/
-/elemental-skeletons/
-/gridfieldextensions/
