--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,10 @@
 {
-    "name": "silverstripe/recipe-elemental",
+    "name": "silverstripe/recipe-cwptest",
     "type": "silverstripe-recipe",
     "require": {
-        "php": ">=5.6.0",
-        "silverstripe/recipe-cms": "^1.0",
-        "silverstripe-themes/simple": "~3.2.0",
-        "dnadesign/silverstripe-elemental": "2.x-dev",
-        "dnadesign/silverstripe-elemental-skeletons": "dev-master",
-        "silverstripe/elemental-blocks": "1.0.x-dev",
-        "silverstripe/vendor-plugin-helper": "^1.0@dev"
+        "cwp/cwp-installer": "2.2.x-dev",
+        "silverstripe/recipe-content-blocks": "2.x-dev",
+        "dnadesign/silverstripe-elemental": "4.x-dev as 3.0.0"
     },
     "require-dev": {
         "phpunit/PHPUnit": "^5.7"
@@ -18,20 +14,35 @@
             "dev-master": "1.x-dev"
         },
         "project-files-installed": [
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/blog.yml",
+            "app/_config/contentblocks.yml",
+            "app/_config/cwpadmin.yml",
+            "app/_config/environmentcheck.yml",
+            "app/_config/mysite.yml",
+            "app/_config/oembed.yml",
+            "app/_config/theme.yml",
+            "app/_config/versionfeed.yml",
+            "app/src/BlocksPage.php",
+            "app/src/HomePage.php",
+            "app/src/HomePageController.php",
+            "app/src/Page.php",
+            "app/src/PageController.php"
+        ],
+        "public-files-installed": [
             ".htaccess",
             "index.php",
             "install-frameworkmissing.html",
             "install.php",
-            "mysite/.htaccess",
-            "mysite/_config.php",
-            "mysite/_config/mysite.yml",
-            "mysite/code/Page.php",
-            "mysite/code/PageController.php",
             "web.config"
         ]
     },
     "config": {
-        "process-timeout": 600
+        "process-timeout": 600,
+        "platform": {
+            "php": "5.6.31"
+        }
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
